# Yandex.Practikum-CPP-sprints

./: README.md
Sprint 1/: Chapter 2 Lesson 3-1.cpp  Chapter 2 Lesson 4-2.cpp  Chapter 2 Lesson 5.cpp  Chapter 3 Lesson 3.cpp  Chapter 3 Lesson 4-1.cpp  Chapter 3 Lesson 4.cpp  Chapter 3 Lesson 5.cpp  Chapter 3 Lesson 6-1.cpp  Chapter 3 Lesson 6-2.cpp  Chapter 3 Lesson 6-3.cpp  Chapter 3 Lesson 6-4.cpp  Chapter 3 Lesson 6-5.cpp  Chapter 3 Lesson 7.cpp  Chapter 4 Lesson 2-1.cpp  Chapter 4 Lesson 2-2.cpp  Chapter 4 Lesson 2-3.cpp  Chapter 4 Lesson 3.cpp  Chapter 4 Lesson 4.cpp  Chapter 4 Lesson 6.cpp  Chapter 4 Lesson 7.cpp  Chapter 4 Lesson 8.cpp  Chapter 5 Lesson 2-2.cpp  Chapter 5 Lesson 6.cpp  Chapter 5 Lesson 7-1.cpp  Chapter 5 Lesson 7-2.cpp  Chapter 6 Lesson 2-1.cpp  Chapter 6 Lesson 4.cpp  Chapter 6 Lesson 9.cpp  Chapter 7 Lesson 2.cpp  Chapter 7 Lesson 3-1.cpp  Chapter 7 Lesson 3-2.cpp  Chapter 7 Lesson 4-1.cpp  Chapter 7 Lesson 4-2.cpp  Chapter 7 Lesson 6.cpp  Chapter 7 Lesson 7-1.cpp  Chapter 7 Lesson 7-2.cpp  Chapter 8 Lesson 2.cpp  Chapter 8 Lesson 3.cpp  Chapter 8 Lesson 4.cpp  Chapter 8 Lesson 5-1.cpp  (+14 more)
Sprint 10/: Chapter 4 Lesson 2-1.cpp  Chapter 4 Lesson 2-2.cpp  Chapter 4 Lesson 3.cpp  Chapter 5 Lesson 11.cpp  Chapter 5 Lesson 2.cpp  Chapter 5 Lesson 4.cpp
Sprint 11/: Chapter 7 Lesson 4.cpp  Chapter 7 Lesson 6.cpp  Chapter 8 Lesson 2.cpp  Chapter 8 Lesson 4.cpp  Chapter 8 Lesson 6.cpp  Chapter 8 Lesson 8.cpp  Chapter 9 Lesson 3.cpp  Chapter 9 Lesson 4.cpp
Sprint 12/: Chapter 11 Lesson 2.cpp  Chapter 11 Lesson 4.cpp  Chapter 11 Lesson 5.cpp  Chapter 11 Lesson 6.cpp  Chapter 12 Lesson 10.cpp  Chapter 13 Lesson 6.cpp  Chapter 14 Lesson 3.cpp  Chapter 14 Lesson 5.cpp
Sprint 13/: Chapter 1 Lesson 3.cpp  Chapter 1 Lesson 4.cpp  Chapter 2 Lesson 10-2.cpp  Chapter 2 Lesson 10.cpp
Sprint 14/: Chapter 4 Lesson 6.cpp  Chapter 7 Lesson 4.proto
Sprint 14/Chapter 6 Lesson 5/: CMakeLists.txt  hmirr.cpp  img_lib.h  ppm_image.cpp  ppm_image.h  sobel.cpp  vmirr.cpp
Sprint 14/Chapter 6 Lesson 9-2/ImgConverter/: CMakeLists.txt  main.cpp
Sprint 14/Chapter 6 Lesson 9-2/ImgLib/: CMakeLists.txt  jpeg_image.cpp  jpeg_image.h
Sprint 14/Chapter 7 Lesson 6/: CMakeLists.txt  contact.proto  iterator_range.h  main.cpp  phone_book.cpp  phone_book.h
Sprint 14/Chapter 8 Lesson 1-2/: CMakeLists.txt  domain.cpp  domain.h  geo.cpp  graph.h  json.cpp  json.h  json_reader.cpp  main.cpp  serialization.cpp  serialization.h  transport_catalogue.proto  transport_router.cpp  transport_router.h
Sprint 2/: Chapter 11 Lesson 3.cpp  Chapter 11 Lesson 5.cpp  Chapter 11 Lesson 6.cpp  Chapter 11 Lesson 7.cpp  Chapter 12 Lesson 2.cpp  Chapter 12 Lesson 3.cpp  Chapter 12 Lesson 4.cpp  Chapter 12 Lesson 5.cpp  Chapter 12 Lesson 6.cpp  Chapter 12 Lesson 8 (Final Sprint 2).cpp
Sprint 3/: Chapter 15 Lesson 2.cpp  Chapter 15 Lesson 3-1.cpp  Chapter 15 Lesson 3-2.cpp  Chapter 15 Lesson 4.cpp  Chapter 15 Lesson 6.cpp  Chapter 16 Lesson 2.cpp  Chapter 16 Lesson 3.cpp  Chapter 16 Lesson 4-1.cpp  Chapter 16 Lesson 4-2.cpp  Chapter 16 Lesson 5.cpp  Chapter 17 Lesson 2.cpp  Chapter 17 Lesson 3.cpp  Chapter 17 Lesson 4.cpp  Chapter 17 Lesson 5.cpp  Chapter 17 Lesson 6 (Final Sprint 3).cpp
Sprint 4/: Chapter 19 Lesson 2-1.cpp  Chapter 19 Lesson 2-2.cpp  Chapter 19 Lesson 3-1.cpp  Chapter 19 Lesson 3-2.cpp  Chapter 19 Lesson 4.cpp  Chapter 19 Lesson 5-1.cpp  Chapter 19 Lesson 5-2.cpp  Chapter 19 Lesson 5-3.cpp  Chapter 19 Lesson 7-1.cpp  Chapter 19 Lesson 7-2.cpp  Chapter 19 Lesson 7-3.cpp  Chapter 19 Lesson 8-1.cpp  Chapter 19 Lesson 8-2.cpp  Chapter 19 Lesson 9.cpp  Chapter 20 Lesson 2.cpp  Chapter 20 Lesson 4-1.cpp  Chapter 20 Lesson 4-2.cpp  Chapter 20 Lesson 4-3.cpp  Chapter 21 Lesson 2-1.cpp  Chapter 21 Lesson 2-2.cpp  Chapter 21 Lesson 2-3.cpp  Chapter 21 Lesson 3.cpp  Chapter 21 Lesson 4.cpp  Chapter 22 Lesson 2.cpp
Sprint 5/: Chapter 1 Lesson 3.cpp  Chapter 2 Lesson 10.cpp  Chapter 2 Lesson 5.cpp  Chapter 2 Lesson 6.cpp  Chapter 2 Lesson 7-1.cpp  Chapter 2 Lesson 7-2.cpp  Chapter 2 Lesson 9.cpp
Sprint 6/: Chapter 5 Lesson 10-1.cpp  Chapter 5 Lesson 10-2.cpp  Chapter 5 Lesson 3-1.cpp  Chapter 5 Lesson 3-2.cpp  Chapter 5 Lesson 4.cpp  Chapter 5 Lesson 7.cpp  Chapter 5 Lesson 8-1.cpp  Chapter 5 Lesson 8-2.cpp  Chapter 5 Lesson 9-1.cpp  Chapter 6 Lesson 2.cpp  Chapter 6 Lesson 3.cpp  Chapter 6 Lesson 4.cpp  Chapter 6 Lesson 5.cpp  Chapter 6 Lesson 6.cpp  Chapter 6 Lesson 7.cpp  Chapter 6 Lesson 8.cpp
Sprint 7/: Chapter 10 Lesson 4.cpp  Chapter 10 Lesson 6.cpp  Chapter 10 Lesson 7-1.cpp  Chapter 10 Lesson 7-2.cpp  Chapter 8 Lesson 4.cpp  Chapter 9 Lesson 6.cpp  Chapter 9 Lesson 9-1.cpp  Chapter 9 Lesson 9-2.cpp
Sprint 8/: Chapter 12 Lesson 3.cpp  Chapter 12 Lesson 6-1.cpp  Chapter 12 Lesson 6-2.cpp  Chapter 13 Lesson 2.cpp  Chapter 13 Lesson 3.cpp  Chapter 13 Lesson 4.cpp  Chapter 13 Lesson 5-2.cpp  Chapter 13 Lesson 5.cpp  Chapter 14 Lesson 3.cpp  Chapter 14 Lesson 4.cpp  Chapter 14 Lesson 5.cpp  Chapter 14 Lesson 6.cpp
Sprint 9/: Chapter 1 Lesson 3.cpp  Chapter 1 Lesson 4.cpp  Chapter 1 Lesson 5-1.cpp  Chapter 1 Lesson 5-2.cpp  Chapter 1 Lesson 6.cpp  Chapter 1 Lesson 7-1.cpp  Chapter 1 Lesson 7-2.cpp  Chapter 1 Lesson 8.cpp  Chapter 1 Lesson 9.cpp  Chapter 2 Lesson 2-2.cpp  Chapter 2 Lesson 2.cpp
(+473 files in other folders)
